# project-d

./: .gitignore  ARCHITECTURE.md  Cargo.toml  FEATURES.md  MOBILE_GUIDE.md  README.md  finance_ffi.h
finance-core/: Cargo.toml
finance-core/src/: errors.rs  lib.rs
finance-core/src/entities/: account.rs  budget.rs  category.rs  common.rs  exchange_rate.rs  mod.rs  pagination.rs  recurring_transaction.rs  search.rs  tag.rs  transaction.rs  user.rs
finance-core/src/repositories/: account_repository.rs  budget_repository.rs  category_repository.rs  exchange_rate_repository.rs  mod.rs  recurring_transaction_repository.rs  tag_repository.rs  transaction_repository.rs  user_repository.rs
finance-core/src/use_cases/: account_use_cases.rs  budget_use_cases.rs  category_use_cases.rs  currency_use_cases.rs  mod.rs  recurring_transaction_use_cases.rs  search_use_cases.rs  statistics_use_cases.rs  tag_use_cases.rs  transaction_use_cases.rs
finance-core/tests/: domain_tests.rs
finance-ffi/: Cargo.toml  build.rs  cbindgen.toml
finance-ffi/src/: lib.rs
finance-storage/: Cargo.toml
finance-storage/src/: database.rs  date_utils.rs  error.rs  lib.rs  migrations.rs
finance-storage/src/repositories/: mod.rs  sqlite_account_repository.rs  sqlite_budget_repository.rs  sqlite_category_repository.rs  sqlite_exchange_rate_repository.rs  sqlite_recurring_transaction_repository.rs  sqlite_tag_repository.rs  sqlite_transaction_repository.rs  sqlite_user_repository.rs
finance-storage/tests/: repository_tests.rs
finance-sync/: Cargo.toml
finance-sync/src/: lib.rs  tests.rs
include/: finance_ffi.h
