[workspace]
members = [
    "finance-core",
    "finance-storage",
    "finance-sync",
    "finance-ffi",
]
resolver = "2"

[workspace.dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
